# dataline

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
dataline/: __init__.py  pipeline.py
dataline/test/: unit_test example.py
example/: example1.py
tests/: test_pipeline.py
