[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataline"
version = "0.1.0"
description = "Simple class to aid the process of data cleaning."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tiago Botari", email = "tiagobotari@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/tiagobotari/dataline"
Repository = "https://github.com/tiagobotari/dataline"

[tool.setuptools.packages.find]
include = ["dataline*"]
exclude = ["dataline.test*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
